--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "language-graql",
   "main": "./lib/language-graql",
   "version": "0.0.0",
-  "description": "A short description of your package",
+  "description": "Atom's syntax highlighting for GRAQL",
   "keywords": [
   ],
-  "repository": "https://github.com/atom/language-graql",
+  "repository": "https://github.com/ShishkinDmitriy/language-graql",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
